--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ package-lock.json
 # Typescript related
 *.d.ts
 *.js.map
-nodejs/**/*.js
+lab/modules/nodejs/cjs-example/*.js
+lab/modules/nodejs/esm-example/*.js
