--- a/lab/cpp/my-sqrt-lib/CMakeLists.txt
+++ b/lab/cpp/my-sqrt-lib/CMakeLists.txt
@@ -3,6 +3,13 @@ cmake_minimum_required(VERSION 3.14)
 # set the project name and version
 project(mymath VERSION 1.0 DESCRIPTION "dummy math library for build & debug demo purposes")
 
+# prevent debug symbols stripping
+set(CMAKE_BUILD_TYPE Debug)
+
+# specify the C++ standard
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 # find source files
 file(GLOB SOURCES src/*.cxx)
 
@@ -18,10 +25,19 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
     SOVERSION 1
     PUBLIC_HEADER include/mymath.h)
 
-# set system loader search path
-set(LIBRARY_DESTINATION /usr/local/lib/)
-# set system public headers search path
-set(HEADERS_DESTINATION /usr/local/include/)
+if(APPLE)
+    # set system loader search path
+    set(LIBRARY_DESTINATION /usr/local/lib/)
+    # set system public headers search path
+    set(HEADERS_DESTINATION /usr/local/include/)
+endif()
+
+if(UNIX AND NOT APPLE)
+    # set system loader search path
+    set(LIBRARY_DESTINATION /usr/lib64/)
+    # set system public headers search path
+    set(HEADERS_DESTINATION /usr/include/)
+endif()
 
 # copy the shared library to system shared libraries search paths
 install(TARGETS ${PROJECT_NAME}
